--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite serve --mode development",
     "build:prod": "vue-tsc --noEmit && vite build --mode production",
     "serve": "vite preview",
-    "lint": "eslint src/**/*.{ts,js,vue} --fix",
+    "lint": "eslint --fix \"./src/**/*.{ts,js,vue}\"",
     "prepare": "husky install",
     "prettier": "prettier --write ."
   },
